--- a/FLE/devoir3/lettre.tex
+++ b/FLE/devoir3/lettre.tex
@@ -6,7 +6,7 @@
 \def \ttprofname{Isabelle Lallemand} % teachers name
 \def \ttabrv{FLE804 } % abbreviation of names class
 \def \ttabrvxt{Cycle d'harmonisation } % period
-\def \mytitle{Peut-on réformer l'université sans toucher aux grandes écoles ?} % Big title
+\def \mytitle{Peut-on réformer l'université sans toucher aux Grandes Écoles ?} % Big title
 \def \mysubtitle{FLE Avancé - Deuxième semestre de 2011} % subtitle
 \def \ttauthi{Tiago Chedraoui Silva} % author's name
 \def \ttxti{Casier: 214 } % Extra text right side of name
@@ -44,8 +44,8 @@
 
 
 Premièrement, la France, en ayant un système d'enseignement supérieur très différent des autres, doit l'expliquer a toute le monde. Au même temps, ce système n'est pas parfait et tous ses problèmes sont discutés dans la société française.
-La première chose qui fait ce système différent, c'est la division paradoxale entre les Universités et les grandes écoles.
-D'une part, il y a l'Université, dont le but est de forme les chercheurs, des personnes avec une connaissance plus généralistes et, comme a dit Olivier Beaud (professeur de droit public à l’Université Panthéon-Assas)  honnêtes hommes et de bons citoyens.
+La première chose qui fait ce système différent, c'est la division paradoxale entre les Universités et les Grandes Écoles.
+D'une part, il y a l'Université, dont le but est de forme les chercheurs, des personnes avec une connaissance plus généralistes et, comme a dit Olivier Beaud (professeur de droit public à l’Université Panthéon-Assas),  honnêtes hommes et de bons citoyens.
 D'autre part, avec une bonne réputation si comparée a une Université, il y a les
 Grandes École qui sont  plus proche de les entreprises, et dont  le but c'est de
 préparer les personnes pour le marché de travail.
@@ -55,14 +55,25 @@ Par   ailleurs,   l'université  souffre   d'une   hétérogénéité  des   ét
 gigantesque, et cela  provoque une grande difficulté pour  travailler pendant le
 cours.
 
-Ainsi, en essayant de changer le système des université à cause de la mauvaise réputation, une loi de 2007 a essayer de changer ce scénario, cependant, un des fondateurs du « Collectif pour la défense de l’Université », M.Olivier Beaud, défend que le problème n'est pas l'université, mais le système française. Il dit que l’université doit avoir le droite de choisir aussi les étudiantes, parce que aujourd'hui elle est une voiture-balai, cela veut dire, qu'elle accepte presque toute le monde qui a besoin d'un enseignement supérieur. Mais, l'université ne peut pas accepter de personnes que ne sont pas prépares.
+Ainsi, en essayant  de changer le système des université à  cause de la mauvaise
+réputation, une loi de 2007 a  essayer de changer ce scénario, cependant, un des
+fondateurs du  « Collectif pour la  défense de l’Université  », M.Olivier Beaud,
+défend que le problème n'est pas l'université, mais le système française. Il dit
+que l’université doit avoir le droite de choisir aussi les étudiantes, parce que
+aujourd'hui elle est une voiture-balai,  cela veut dire, qu'elle accepte presque
+toute le monde qui a besoin d'un enseignement supérieur.
+Mais, l'université ne
+peut pas accepter de personnes que ne  sont pas prépares. Il y a ici un nouvelle
+paradoxe, si  les Grandes Écoles acceptent  un petit morceau de  personnes et si
+l'Université  faire la même chose, il n'y aura  pas de place pour toute  le monde,  et cela
+implique en autre chose que Olivier a dit, si on n'a pas d'argent, on n'a pas la
+même préparation que les autres, donc l'idée d'égalité ira être plus atténue.
 
-Finalement, quelques idées ont été proposés, par exemple, Jean Arrous (professeur à l'université de Strasbourg), a propos que les grandes écoles deviennent des instituts d'université spécialisés rattachés aux universités; et que les instituts spécialisés ne sont ouverts qu'à des candidats pourvus d'une licence qu'ils auront préparée dans une université. Mais, cela n'est pas défendu par toute le monde, car les Universités vont être le prépas pour les Grande Écoles, et l'idée d'une Université n'est pas cela.
+Finalement, quelques idées ont été proposés, par exemple, Jean Arrous (professeur à l'université de Strasbourg), a propos que les Grandes Écoles deviennent des instituts d'université spécialisés rattachés aux universités; et que les instituts spécialisés ne sont ouverts qu'à des candidats pourvus d'une licence qu'ils auront préparée dans une université. Mais, cela n'est pas défendu par toute le monde, car les Universités vont être le prépas pour les Grande Écoles, et l'idée d'une Université n'est pas cela.
 
-
-
-
-On peut conclure que le système française est unique, mais, même les françaises doutent si le système est parfait.
+On peut conclure que le système  française est unique, mais, même les françaises
+doutent si  le système  est parfait. L'Université  doit être reforme,  mais pour
+cela, le système doit être changer et cela concerne aussi les Grandes Écoles.
 Il y aura beaucoup de discutions avant d'avoir une quelque changement dans le système. On espère que quand le changement arriver, ce ne sera pas trop tard pour récupérer le prestige française.
 
 
