Fin plan et cover

--- a/FLE/Proj/proj.tex
+++ b/FLE/Proj/proj.tex
@@ -17,8 +17,8 @@
 \def \ttabrvxt{Cycle d'harmonisation } % period
 \def \mytitle{Proposition de projet } % Big title
 \def \mysubtitle{FLE Avancé - Deuxième semestre de 2011} % subtitle
-\def \ttauthi{Angie} % author's name
-\def \ttxti{Casier: XXX } % Extra text right side of name
+\def \ttauthi{Angie Añazgo La Rosa} % author's name
+\def \ttxti{Casier: 200 } % Extra text right side of name
 \def \ttauthii{Tiago Chedraoui Silva} % author's name
 \def \ttxtii{Casier: 214 } % Extra text right side of name
 \def \ttdate{Novembre 15, 2011} % date
@@ -45,7 +45,7 @@ période de 3 mois, avec début dans novembre de 2011 et fin en février de 2012
 \end{enumerate}
 
 \begin{table}[h]
-\caption{Cronograma das atividades}
+\caption{Calendrier des activités}
 \begin{center} {
   \begin{tabular}{ |c|c|c|c|c|c|c|c|c|c|}
       \hline
@@ -54,10 +54,10 @@ période de 3 mois, avec début dans novembre de 2011 et fin en février de 2012
       &   \multicolumn{2}{|c|}{Novembre}   &  \multicolumn{2}{|c|}{Décembre}& \multicolumn{2}{|c|}{Janvier} & \multicolumn{2}{|c|}{Février} \\ \hline
       \hline
       & 1-15 & 16-30 & 1-15 & 16-30 & 1-15 & 16-30 & 1-15 & 16-30 \\ \hline
-      1 & $\bullet$ & $\bullet$ & $\bullet$ & & & & & \\ \hline
+      1 & $\bullet$ & & & & & & & \\ \hline
       2 & $\bullet$ & $\bullet$ & $\bullet$ & & & & & \\ \hline
-      3 &  & $\bullet$ & $\bullet$ & $\bullet$& & & & \\ \hline
-      4 & & & & & $\bullet$ & $\bullet$& & \\ \hline
+      3 &  &  & $\bullet$ & $\bullet$& & & & \\ \hline
+      4 & & & & & $\bullet$ & $\bullet$& $\bullet$ & \\ \hline
       5 & & & & & & & $\bullet$ & \\ \hline
       6 & & & & & & & $\bullet$ & \\ \hline
       7 & & & & & & & & $\bullet$\\ \hline
