--- a/FLE/Proj/tcs.sty
+++ b/FLE/Proj/tcs.sty
@@ -59,7 +59,13 @@
 
 %COVER%
 \newcommand*{\titleTMB}{ 
-  \begingroup \centering 
+ \begin{figure}[h!]
+    \begin{center}
+      \includegraphics[scale=0.35]{telcom}
+    \end{center}
+  \end{figure}
+  \vspace*{80pt}
+   \begingroup \centering 
   {\large\scshape \ttabrv - \ttabrvxt } \\[0.2\baselineskip] 
   \rule{11.0cm}{1.6pt}\vspace*{-\baselineskip}\vspace*{2pt}
   \rule{11.0cm}{0.4pt}\\[\baselineskip] 
