--- a/ATH/ath1/lettre.tex
+++ b/ATH/ath1/lettre.tex
@@ -23,8 +23,8 @@
 \begin{document}
 \titleTMB 
 \newpage
-\tableofcontents
-\newpage
+%\tableofcontents
+%\newpage
 
 \pagestyle{fancy}
 
@@ -115,21 +115,48 @@ Business Planning in Telecom Projects have five phases:
 
 \end{description}
 
-\item[Revenues] In  this phase we  will estimated our  ARPU based in:  price per
+\item[Revenues] In  this phase we  will estimate our  ARPU based in:  price per
   service,  price  per bundled  package,  price  trends  and forecasted  revenue
   mix.  After  we estimate  average  number of  user  based  in: traffic,  usage
   patterns, addressable market etc; So with {\color{red}ARPU} and an {\color{red}average number of users},
   multiplying both value will give us the {\color{red}service revenue.}
 
-\item[Capital expenses]
-\item[Operational expenses]
-\item[Free cash flow]
+\item[Capital expenses]  In this phase we  will estimate our  expenses, in other
+  words, we  will sum all  costs. Firstly we  have {\color{purple}infrastructure
+    costs},  which is the  infrastructure need  to be  be built  in order  to be
+  possible  to offer  my  service/product.  Secondly, we  have  cost related  to
+  costumers  and   Site,  for   example,  instalation  cost,   customer  premise
+  equipement. Thirdly, we  have License Fee, which are tax needed  to be paid in
+  order use  a spectrum  for data transmission.  Moreover, we should  consider a
+  replacement cost, which  is the cost if I lose some  costumer. Indeed, a great
+  difficult of telecommunication  business is not only to  retrieve clients, but
+  also to mantain them for a long time.
+ % keep costumers -> traffic risks
+\item[Operational  expenses] In  this  phase we  will  estimate the  operational
+  costs, which are composed by two different types of costs: variable costs, and
+  fixed costs;
+  Variable  cost  depends  on  external  factor, for  example,  Roaming  Charges
+  dependes on the  operator that did the service for  your company abroad, other
+  examples are  Marketing cost, that may  be bigger or smaller  depending in how
+  much consumers we already have;
+  Differently, fixed costs, which are not dependable of external factor, for example, Office costs, spectrum license,
+  Administrative  personnel,  they  can  be  meseured  without  having  external
+  influence as long as they have a fixed price.
 
+
+\item[Free cash flow] Finally, based  in Revenues and expenses, and some metrics
+  we will make a cash flow analysis.
 \end{description}
 
 \subsection{Business Plan Key Output}
 \subsection{Funding Plan and Milestones}
 \subsection{Sensitivity Analysis}
-
+In this part, firstly, we should review our numbers, for that we could compare what we
+got we existing ones (benchmark). Secondly, every risk should be take in account,
+because they  can change the sceneraio,  for example, if the  construction of an
+antenna  is  delayed,  how  does  it  will  impact in  the  project?  And  if  I
+miscalculated ARPU? What if inflation rises and local currency depreciates? Does
+my business plan handles with that?
+What is the worst scenatio? How my bussiness plan will work in that scenario?
 
 \end{document}
