Falta uma parte e verificar outras

--- a/ATH/ath1/lettre.tex
+++ b/ATH/ath1/lettre.tex
@@ -149,7 +149,21 @@ Business Planning in Telecom Projects have five phases:
 \end{description}
 
 \subsection{Business Plan Key Output}
+
+In this phase, given financial statements, and using Key metrics, we can analyze
+both loan payment (Payback)  and FCF (free cash flow).
+Two main objective are: have a  FCF positive, that means, income is greater  than expenses; and pay your debt, which can be viewed by positive accumulated free cash flow.
+
+
+But, are my expectations reasonable? Depending on the project is will be;
+For the  Payback Year, if it  is a GSM project  in six to eight  years, debt
+should be payed, if its an optical network, it will take more than ten years.
+For a  positive FCF, if  it is a  GSM project in three  to four years  it should
+happen, if an optical network from seven to nine years should be reasonable;
+
 \subsection{Funding Plan and Milestones}
+
+
 \subsection{Sensitivity Analysis}
 In this part, firstly, we should review our numbers, for that we could compare what we
 got we existing ones (benchmark). Secondly, every risk should be take in account,
