--- a/ATH/ath1/lettre.tex
+++ b/ATH/ath1/lettre.tex
@@ -12,7 +12,7 @@
 \def \ttxti{} % Extra text right side of name
 \def \ttdate{November 18, 2011} % date
 
-%\spc{2} % double spacing
+\spc{1.5} % double spacing
 
 \usepackage{fancyhdr}
 
@@ -115,37 +115,35 @@ Business Planning in Telecom Projects have five phases:
 
 \end{description}
 
-\item[Revenues] In  this phase we  will estimate our  ARPU based in:  price per
+\item[Revenues] 
+ In  this phase the ARPU should be estimated based in:  price per
   service,  price  per bundled  package,  price  trends  and forecasted  revenue
-  mix.  After  we estimate  average  number of  user  based  in: traffic,  usage
-  patterns, addressable market etc; So with {\color{red}ARPU} and an {\color{red}average number of users},
+  mix.  After, the average  number of  user  should be estimated based  in: traffic,  usage   patterns, addressable market etc; So with {\color{red}ARPU} and an {\color{red}average number of users},
   multiplying both value will give us the {\color{red}service revenue.}
 
-\item[Capital expenses]  In this phase we  will estimate our  expenses, in other
-  words, we  will sum all  costs. Firstly we  have {\color{purple}infrastructure
-    costs},  which is the  infrastructure need  to be  be built  in order  to be
+\item[Capital expenses]  In this phase expenses should be estimated, in other
+  words, all  costs will be summed . Firstly, we  have {\color{purple}infrastructure
+    costs},  which is the  infrastructure needed to be  be built  in order  to be
   possible  to offer  my  service/product.  Secondly, we  have  cost related  to
-  costumers  and   Site,  for   example,  instalation  cost,   customer  premise
-  equipement. Thirdly, we  have License Fee, which are tax needed  to be paid in
-  order use  a spectrum  for data transmission.  Moreover, we should  consider a
-  replacement cost, which  is the cost if I lose some  costumer. Indeed, a great
-  difficult of telecommunication  business is not only to  retrieve clients, but
-  also to mantain them for a long time.
- % keep costumers -> traffic risks
-\item[Operational  expenses] In  this  phase we  will  estimate the  operational
-  costs, which are composed by two different types of costs: variable costs, and
-  fixed costs;
-  Variable  cost  depends  on  external  factor, for  example,  Roaming  Charges
-  dependes on the  operator that did the service for  your company abroad, other
-  examples are  Marketing cost, that may  be bigger or smaller  depending in how
-  much consumers we already have;
-  Differently, fixed costs, which are not dependable of external factor, for example, Office costs, spectrum license,
-  Administrative  personnel,  they  can  be  meseured  without  having  external
-  influence as long as they have a fixed price.
+  costumers  and   Site,  for   example,  installation  cost,   customer  premise,
+  equipment. Thirdly, we  have License Fee, which are tax needed  to be paid in  order use  a spectrum  for data transmission.  Moreover,   replacement cost  should be considered, which  is the cost if I lose some  costumer. Indeed, a great   difficult of telecommunication  business is not only to  retrieve clients, but
+  also to maintain them for a long time.
 
+ % keep costumers -> traffic risks
+
+\item[Operational expenses] 
+In  this  phase  the  operational
+  costs , which are composed by two different types of costs (variable costs, and  fixed costs) should be estimated;
+
+  Variable  cost  depends  on  external  factor, for  example,  Roaming  Charges
+  depends on the  operator that did the service for  your company abroad, other
+  examples are  Marketing cost, that may  be bigger or smaller  depending on the number of consumers we already have;
+
+  Differently, fixed costs does not depends on external factor, for example, Office costs, spectrum license,  Administrative  personnel,  they  can  be  measured  without  having  external influence as long as they have a fixed price.
 
 \item[Free cash flow] Finally, based  in Revenues and expenses, and some metrics
   we will make a cash flow analysis.
+
 \end{description}
 
 \subsection{Business Plan Key Output}
@@ -154,7 +152,6 @@ In this phase, given financial statements, and using Key metrics, we can analyze
 both loan payment (Payback)  and FCF (free cash flow).
 Two main objective are: have a  FCF positive, that means, income is greater  than expenses; and pay your debt, which can be viewed by positive accumulated free cash flow.
 
-
 But, are my expectations reasonable? Depending on the project is will be;
 For the  Payback Year, if it  is a GSM project  in six to eight  years, debt
 should be payed, if its an optical network, it will take more than ten years.
@@ -162,15 +159,19 @@ For a  positive FCF, if  it is a  GSM project in three  to four years  it should
 happen, if an optical network from seven to nine years should be reasonable;
 
 \subsection{Funding Plan and Milestones}
+The next step after making the business plan, is to meet the peak funding requirement, that means, to make the business possible, an amount of money is needed, but where it will come from? A mix of loan, equity, bonds and others should be well analyzed.
 
+For that, somethings should be considered: risk on the future cash flow stream if some funding mix is chosen; tax impact on debt and dividends; the financial market enviroment (which one is better, how much the bank can loan, etc);
 
+Besides that, in order to get a loan, some thresholds will be imposed, for instance, a minimum of subscribers,revenues and  EBITDA;
 \subsection{Sensitivity Analysis}
-In this part, firstly, we should review our numbers, for that we could compare what we
-got we existing ones (benchmark). Secondly, every risk should be take in account,
-because they  can change the sceneraio,  for example, if the  construction of an
-antenna  is  delayed,  how  does  it  will  impact in  the  project?  And  if  I
-miscalculated ARPU? What if inflation rises and local currency depreciates? Does
-my business plan handles with that?
-What is the worst scenatio? How my bussiness plan will work in that scenario?
+
+In this part, firstly, we should review our numbers, for that, we should compare what we have with existing ones (benchmark).
+Secondly, every risk should be take in account,
+because they  can change the scenario,  for example, if the  construction of an
+antenna  is  delayed,  how  does  it  will  impact in  the  project?  And  if ARPU  was  miscalculated ? 
+And if inflation rises and local currency depreciates,
+does my business plan can handle with that?
+What is the worst scenario? How my bussiness plan will work in that scenario?
 
 \end{document}
