--- a/FLE/Proj/proj.tex
+++ b/FLE/Proj/proj.tex
@@ -1,20 +1,20 @@
 % -%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%
-% MDI200: Probabilités                            %  
-% Devoir 1                                        %
-% Data:05/10/2011                                 %
+% FLE % 
+% Data:28/11/2011                                 %
 % Paris,France                                    % 
 % Groupe:                                         %
 % - Tiago Chedraoui Silva                   % 
+% - Angie Anazgo la Rosa %
 % -%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%
 
-\documentclass[a4paper,12pt]{article}
+\documentclass[a4paper,11pt]{article}
 
 \usepackage[francais,listings,algo]{tcs}
 
 % Cover %
 \def \ttprofname{Isabelle Lallemand} % teachers name
 \def \ttabrv{FLE804 } % abbreviation of names class
-\def \ttabrvxt{Cycle d'harmonisation } % period
+\def \ttabrvxt{} % period
 \def \mytitle{Proposition de projet } % Big title
 \def \mysubtitle{FLE Avancé - Deuxième semestre de 2011} % subtitle
 \def \ttauthi{Angie Añazgo La Rosa} % author's name
@@ -26,10 +26,65 @@
 \begin{document}
 \titleTMB 
 \newpage
+\tableofcontents
+\newpage
+
+\section{Introduction}
+
+\subsection{Origine du débat}
+\subsection{Sources utilisés}
+Quels sont les sources de notre travail? Une liste de sources.
+\subsection{Motivation}
+Notre motivation pour travailler ce sujet
+\subsection{Description du sujet}
+Décrire les impacts du changement climatique, la cause, etc.
+
+
+\section{Points de vue}
+\subsection{Réaction de la société}
+On décrira chaque position: les écologistes, le gouvernement, la société en général, la presse, etc
+Il faut choisir et résumer lesquels
+
+\subsection{Contraintes}
+
+\subsubsection{D'ordre scientifique}
+
+\begin{itemize}
+\item Pression des politiciens sur les scientifiques
+\item Pression des écologistes sur les politiciens
+\end{itemize}
+
+\subsubsection{Sociales}
+
+\begin{itemize}
+\item Médiatisation sensationnaliste
+\item Société de consommation
+\end{itemize}
+
+\subsubsection{Gouvernementales}
+
+\begin{itemize}
+\item Protocole de Kyoto
+\item Taxes sur les émissions de Gaz à effet de serre
+\end{itemize}
+
+\subsubsection{Économiques}
+
+\begin{itemize}
+\item Nécessité de maintenir la croissance économique
+\item Coûts associés aux changements technologiques
+\end{itemize}
+
+
+\section{Débat: Solutions proposés}
+
+
+\section{Sources}
+Ici on liste d'où on a obtenu l'information
 
 \subsection*{Plan}
 \label{subsec:cronograma}
-Le développement du projet de recherche est liées aux ativités suivants. Le
+Le développement du projet de recherche est liées aux activités suivants. Le
 calendrier est présenté au tableau~\ref{tab:cronograma} et est organisée dans un
 période de 3 mois, avec début dans novembre de 2011 et fin en février de 2012.
 
@@ -45,26 +100,26 @@ période de 3 mois, avec début dans novembre de 2011 et fin en février de 2012
 \end{enumerate}
 
 \begin{table}[h]
-\caption{Calendrier des activités}
-\begin{center} {
-  \begin{tabular}{ |c|c|c|c|c|c|c|c|c|c|}
-      \hline
-      & \multicolumn{4}{|c|}{2011} & \multicolumn{4}{|c|}{2012}\\ \hline
-      \hline
-      &   \multicolumn{2}{|c|}{Novembre}   &  \multicolumn{2}{|c|}{Décembre}& \multicolumn{2}{|c|}{Janvier} & \multicolumn{2}{|c|}{Février} \\ \hline
-      \hline
-      & 1-15 & 16-30 & 1-15 & 16-30 & 1-15 & 16-30 & 1-15 & 16-30 \\ \hline
-      1 & $\bullet$ & & & & & & & \\ \hline
-      2 & $\bullet$ & $\bullet$ & $\bullet$ & & & & & \\ \hline
-      3 &  &  & $\bullet$ & $\bullet$& & & & \\ \hline
-      4 & & & & & $\bullet$ & $\bullet$& $\bullet$ & \\ \hline
-      5 & & & & & & & $\bullet$ & \\ \hline
-      6 & & & & & & & $\bullet$ & \\ \hline
-      7 & & & & & & & & $\bullet$\\ \hline
+  \caption{Calendrier des activités}
+  \begin{center} {
+      \begin{tabular}{ |c|c|c|c|c|c|c|c|c|c|}
+        \hline
+        & \multicolumn{4}{|c|}{2011} & \multicolumn{4}{|c|}{2012}\\ \hline
+        \hline
+        &   \multicolumn{2}{|c|}{Novembre}   &  \multicolumn{2}{|c|}{Décembre}& \multicolumn{2}{|c|}{Janvier} & \multicolumn{2}{|c|}{Février} \\ \hline
+        \hline
+        & 1-15 & 16-30 & 1-15 & 16-30 & 1-15 & 16-30 & 1-15 & 16-30 \\ \hline
+        1 & $\bullet$ & & & & & & & \\ \hline
+        2 & $\bullet$ & $\bullet$ & $\bullet$ & & & & & \\ \hline
+        3 &  &  & $\bullet$ & $\bullet$& & & & \\ \hline
+        4 & & & & & $\bullet$ & $\bullet$& $\bullet$ & \\ \hline
+        5 & & & & & & & $\bullet$ & \\ \hline
+        6 & & & & & & & $\bullet$ & \\ \hline
+        7 & & & & & & & & $\bullet$\\ \hline
 
-    \end{tabular}
-  }\end{center}
-\label{tab:cronograma}
+      \end{tabular}
+    }\end{center}
+  \label{tab:cronograma}
 \end{table}
 
 
