--- a/FLE/Proj/tcs.sty
+++ b/FLE/Proj/tcs.sty
@@ -66,7 +66,7 @@
   \end{figure}
   \vspace*{80pt}
    \begingroup \centering 
-  {\large\scshape \ttabrv - \ttabrvxt } \\[0.2\baselineskip] 
+  {\large\scshape \ttabrv  \ttabrvxt } \\[0.2\baselineskip] 
   \rule{11.0cm}{1.6pt}\vspace*{-\baselineskip}\vspace*{2pt}
   \rule{11.0cm}{0.4pt}\\[\baselineskip] 
   {\LARGE \mytitle }\\\vspace*{\baselineskip} 
