Starting mentoring text

--- a/EN/tuto02/tuto.tex
+++ b/EN/tuto02/tuto.tex
@@ -31,11 +31,15 @@
 % Intro
 % Which events will be staged in brazil? And, specifically, in which cities ?
 % What does the press think about, Brazil, Brazil's infrastucture? 
+
 In October 2007, Fédération Internationale de Football Association (FIFA), the
 sport's global governing body, chose Brazil as the host of 2014 world's cup.
-Two  years  after,  in  October  2009,  International  Olympic  Committee  (IOC)
-announced  that Rio  de Janeiro,  will stage  the 2016  Olympic  and Paralympics
-Games.
+And two years after, in October 2009, International Olympic Committee (IOC)
+announced  that Rio de Janeiro,  will stage  the 2016  Olympic  and Paralympics
+Games.  
+% "happy  people" is not good,TO DO: think in another expression
+Although its beautiful landscapes and hospitable people,
+Brazil is seen by press as a doubtful country  regarding infrastructure and security.
 
 
 \end{document}
