--- a/EN/tuto02/tuto.tex
+++ b/EN/tuto02/tuto.tex
@@ -15,7 +15,7 @@
 \def \ttprofname{Penelope POULTON} % teachers name
 \def \ttabrv{ANG206} % abbreviation of names class
 \def \ttabrvxt{P2 } % period
-\def \mytitle{Brazil - Preparations for World Cup and Olympic games} % Big title
+\def \mytitle{Preparations for 2014 World Cup and 2016 Olympic games} % Big title
 \def \mysubtitle{Tutorial english class - Second Semester of 2011 } % subtitle
 \def \ttauth{Tiago Chedraoui Silva} % author's name
 \def \ttxt{Pigeonhole: 214 } % Extra text right side of name
@@ -26,10 +26,10 @@
 \newpage
 \spc{2} % double spacing
 
-\section{Text with words}
+\section{My country viewed by others}
 
 % Intro
-% Which events will be staged in brazil? And, specifically, in which cities ?
+% Which events will be staged in Brazil ? And, specifically, in which cities ?
 % What does the press think about, Brazil, Brazil's infrastucture? 
 
 In October 2007, Fédération Internationale de Football Association (FIFA), the
@@ -37,9 +37,61 @@ sport's global governing body, chose Brazil as the host of 2014 world's cup.
 And two years after, in October 2009, International Olympic Committee (IOC)
 announced  that Rio de Janeiro,  will stage  the 2016  Olympic  and Paralympics
 Games.  
-% "happy  people" is not good,TO DO: think in another expression
 Although its beautiful landscapes and hospitable people,
-Brazil is seen by press as a doubtful country  regarding infrastructure and security.
+Brazil  is seen  by press  as a  doubtful country  regarding  infrastructure and
+security.
 
+% Why a doubtful country?
+On the security side, I think the press, based on various data, can strongly doubt my country;
+because, although Brazil holds the seventh economy in the world, its HDI (Human
+Development Index) is only the eighty-fourth, which means we have some problems.
+But, is this  classification acceptable? Unfortunately, in a  country where child
+labor still exists, where illiteracy numbers
+reaches more  than five percent of  population and  where crime scares
+population, this  classification should  be said as  correct. Also, I'm  a great
+believer that security is one of the biggest and oldest problems of Brazil.
+
+
+On infrastructure side, the imposed deadline to begin works related to
+world cup was may 2010, but at that time, not even fifty percent had begun; today, 
+all stadiums have begun, but not all airports. 
+This scenario  provides a  prevision that some  airports will not  be completed,
+that means, people will be able to travel, however some problems as lack of flights and  delays should be seen.
+On the  other hand,  if Brazil  will suffer in  the World  Cup, Rio  de Janeiro,
+Brazil's second  biggest city , will not  only meet all the  standards, but also
+will show why it is a spectacular city being one of the best Brazilian tourism cities.
+
+
+%specified, giving a high comfort to everyone capable to pay a fortune in tickets
+
+%this data  is correct, however Brazil  is the world's fifth  largest country and
+%which  part have  a  different situation,  southeast  and south  parts are  more
+%developed. 
+
+% Infrastructure
+%I  firmly believe  that  Brazil is  not only  going  to meet  all the  standards
+%specified, giving a high comfort to everyone capable to pay a fortune in tickets,
+%but also it will show  that luxury is the less important  in life, as  show by
+%south africans, money will not bring us happy;
+
+%we should see more sun sets, complain less and live more.
+
+% To do:
+% Explain my country, and it difficulties; 
+
+% Why is Brazil capable to handle with this?
+% How was the scenario and how is it today?
+% Compare with South Africa
+% Show as example Itaquera,
+% Compare time with Dubai
+
+% I firmly believe
+% I'm a great believer
+% I feel
+% I think
+% I can't understand
+% Contrary to popular believe
+% In my view/ To my mind
+% From my point of view
 
 \end{document}
