--- a/EN/tuto02/tuto.tex
+++ b/EN/tuto02/tuto.tex
@@ -2,9 +2,9 @@
 % ANG: Anglais % 
 % Mentoring 2 %
 % Data:09/12/2011                                 %
-% Paris,France                                    % 
-% Groupe:                                         %
-% - Tiago Chedraoui Silva                   % 
+% Paris,France % 
+% Groupe: %
+% - Tiago Chedraoui Silva % 
 % -%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%
 
 \documentclass[a4paper,12pt]{article}
@@ -26,11 +26,11 @@
 \newpage
 \spc{2} % double spacing
 
-\section{My country viewed by others}
+\section{Can great events be realized in Brazil?}
 
 % Intro
 % Which events will be staged in Brazil ? And, specifically, in which cities ?
-% What does the press think about, Brazil, Brazil's infrastucture? 
+% What does the press think about, Brazil, Brazil's infrastructure? 
 
 In October 2007, Fédération Internationale de Football Association (FIFA), the
 sport's global governing body, chose Brazil as the host of 2014 world's cup.
